Tourney name gets cut of at a specific point (at 400px width) to prevent ugly wrapping

--- a/app/assets/stylesheets/_tourney-card.scss
+++ b/app/assets/stylesheets/_tourney-card.scss
@@ -26,8 +26,12 @@
         &:first-child {
             //margin-right: 500px;
             width: 400px;
+            max-width: 400px;
             font-size: large;
             font-weight: 700;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
             a {
                 text-decoration: none;
             }
